--- a/GoodContent/design.css
+++ b/GoodContent/design.css
@@ -15,3 +15,21 @@
     display: flex;
     gap: 50px;
   }
+
+  .main-components{
+    display: flex;
+    background-color: gray;
+    padding-top: 10px;
+  }
+
+  .left-side{
+    width: 65%;
+    height: auto;
+    padding-right: 10%;
+
+  }
+
+  .right-side{
+
+    width: 35%;
+  }
