--- a/GoodContent/design.css
+++ b/GoodContent/design.css
@@ -27,9 +27,18 @@
     width: 65%;
     height: auto;
     padding-right: 20%;
-
   }
 
   .right-side{
     width: 35%;
+  }
+
+  .form-element{
+
+  margin-bottom: 10px; 
+  width: 60%;
+  height: 40px;
+  border: 0.1px solid gray;
+  border-radius: 10px;
+
   }
